--- a/.github/workflows/tf-unit-test .yml
+++ b/.github/workflows/tf-unit-test .yml
@@ -10,4 +10,4 @@ jobs:
     secrets: inherit
     with:
       ACT_MODE: ${{ !!github.event.act }}
-      SKIP_CHECKS: CKV_GCP_62,CKV2_GCP_10
+      SKIP_CHECKS: CKV_GCP_62,CKV2_GCP_10,CKV_GCP_124
