--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -13,6 +13,12 @@ on:
           PyTest Markers to select specific tests to work within Github Action Workflows
         required: true
         type: string
+      working_directory:
+        description: |
+          Working directory containing Terraform test scripts.
+        required: false
+        type: string
+        default: "./test"
     
     secrets:
       GOOGLE_IMPERSONATE_SERVICE_ACCOUNT_EMAIL:
@@ -52,7 +58,7 @@ jobs:
     
     defaults:
         run:
-          working-directory: "./test"
+          working-directory: ${{ inputs.working_directory }}
     
     outputs:
       INPUT_BUCKET: "${{ steps.tf-raw.outputs.INPUT_BUCKET }}"
@@ -91,25 +97,49 @@ jobs:
     
     defaults:
       run:
-        working-directory: "./test/unit_test"
+        working-directory: "${{ inputs.working_directory }}/unit_test"
     
     steps:
       - uses: actions/checkout@v4
-
-      - name: Configure GCP Credentials - Github Runner
-        uses: 'google-github-actions/auth@v2'
-        if: ${{ !inputs.ACT_MODE }}
-        with:
-          service_account: "${{ needs.terraform-output.outputs.SERVICE_ACCOUNT }}"
-          workload_identity_provider: "${{ secrets.GOOGLE_WORKLOAD_IDENTITY_PROVIDER }}"
-          token_format: access_token
-          create_credentials_file: true
         
       - name: Setup Python # Set Python version
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-                  
+      
+      
+      - uses: actions/github-script@v6
+        id: script
+        timeout-minutes: 10
+        with:
+          debug: true
+          script: |
+            const token = process.env['ACTIONS_ID_TOKEN_REQUEST_TOKEN']
+            const runtimeUrl = process.env['ACTIONS_ID_TOKEN_REQUEST_URL']
+            if ( token && runtimeUrl ) {
+              core.setOutput('TOKEN', token.trim())
+              core.setOutput('IDTOKENURL', runtimeUrl.trim())  
+
+              const idtoken = await core.getIDToken('https://oauth2.googleapis.com/token')
+              core.setOutput('IDTOKEN', idtoken)
+            }
+      
+      - id: jwt_token
+        run: |
+          jwtd() {
+              if [[ -x $(command -v jq) ]]; then
+                  jq -R 'split(".") | .[0],.[1] | @base64d | fromjson' <<< "${1}"
+                  echo "Signature: $(echo "${1}" | awk -F'.' '{print $3}')"
+              fi
+          }
+          if ${{ steps.script.outputs.IDTOKEN != '' }}
+          then
+            jwtd "${{ steps.script.outputs.IDTOKEN }}"
+            echo "::add-mask::${{ steps.script.outputs.IDTOKEN }}"
+            echo "OIDC_TOKEN=${{ steps.script.outputs.IDTOKEN }}" >> $GITHUB_ENV
+          fi
+
+      
       # Install pip and pytest
       - name: Install dependencies
         run: |
