--- a/.github/workflows/tf-integration-test.yml
+++ b/.github/workflows/tf-integration-test.yml
@@ -90,7 +90,7 @@ jobs:
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
     with:
       ACT_MODE: ${{ !!github.event.act }}
-      markers: "github and ${{ !!github.event.act && 'oauth2' || 'wif' }}"
+      markers: "github and ${{ !!github.event.act && 'access_token' || 'oidc' }}"
             
                 
   terraform-integration-destroy:
