Added OIDC authentication into test suit

--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -84,7 +84,8 @@ jobs:
     secrets:
       GOOGLE_IMPERSONATE_SERVICE_ACCOUNT_EMAIL: ${{ secrets.GOOGLE_IMPERSONATE_SERVICE_ACCOUNT_EMAIL }}
       GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
-      GOOGLE_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.GOOGLE_WORKLOAD_IDENTITY_PROVIDER }}
+      GOOGLE_PROJECT_BILLING_NUMBER: ${{ secrets.GOOGLE_PROJECT_BILLING_NUMBER }}
+      GOOGLE_WORKLOAD_IDENTITY_PROVIDER: "//iam.googleapis.com/${{ secrets.GOOGLE_WORKLOAD_IDENTITY_PROVIDER }}"
       GOOGLE_OAUTH_ACCESS_TOKEN: ${{ secrets.GOOGLE_OAUTH_ACCESS_TOKEN }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
     with:
