--- a/.github/workflows/tf-integration-test.yml
+++ b/.github/workflows/tf-integration-test.yml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       TF_VAR_POOL_ID: "${{ steps.env_variables.outputs.TF_VAR_POOL_ID }}"
+      TF_VAR_PROVIDER_ID: "${{ steps.env_variables.outputs.TF_VAR_PROVIDER_ID }}"
       TF_VAR_GITHUB_REPOSITORY_OWNER: "${{ steps.env_variables.outputs.TF_VAR_GITHUB_REPOSITORY_OWNER }}"
       TF_VAR_GITHUB_REPOSITORY: "${{ steps.env_variables.outputs.TF_VAR_GITHUB_REPOSITORY }}"
       TF_VAR_GITHUB_REF: "${{ steps.env_variables.outputs.TF_VAR_GITHUB_REF }}"
@@ -30,12 +31,14 @@ jobs:
         id: env_variables
         env:
           TF_VAR_POOL_ID: "${{ secrets.GOOGLE_WORKLOAD_IDENTITY_POOL_ID }}"
+          TF_VAR_PROVIDER_ID: "${{ secrets.GOOGLE_WORKLOAD_IDENTITY_PROVIDER_ID }}"
           TF_VAR_GITHUB_REPOSITORY_OWNER: "${{ github.repository_owner }}"
           TF_VAR_GITHUB_REPOSITORY: "${{ github.repository }}"
           TF_VAR_GITHUB_REF: "${{ github.ref }}"
           TF_VAR_GITHUB_ENV: production
         run: |
           echo "TF_VAR_POOL_ID=$(echo $TF_VAR_POOL_ID | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
+          echo "TF_VAR_PROVIDER_ID=$(echo $TF_VAR_PROVIDER_ID | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           echo "TF_VAR_GITHUB_REPOSITORY_OWNER=$(echo $TF_VAR_GITHUB_REPOSITORY_OWNER | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           echo "TF_VAR_GITHUB_REPOSITORY=$(echo $TF_VAR_GITHUB_REPOSITORY | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           echo "TF_VAR_GITHUB_REF=$(echo $TF_VAR_GITHUB_REF | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
@@ -53,6 +56,7 @@ jobs:
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       env_variables: |
         TF_VAR_POOL_ID="${{ needs.reusable-env-vars.outputs.TF_VAR_POOL_ID }}"
+        TF_VAR_PROVIDER_ID="${{ needs.reusable-env-vars.outputs.TF_VAR_PROVIDER_ID }}"
         TF_VAR_GITHUB_REPOSITORY_OWNER="${{ needs.reusable-env-vars.outputs.TF_VAR_GITHUB_REPOSITORY_OWNER }}"
         TF_VAR_GITHUB_REPOSITORY="${{ needs.reusable-env-vars.outputs.TF_VAR_GITHUB_REPOSITORY }}"
         TF_VAR_GITHUB_REF="${{ needs.reusable-env-vars.outputs.TF_VAR_GITHUB_REF }}"
@@ -72,6 +76,7 @@ jobs:
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       env_variables: |
         TF_VAR_POOL_ID="${{ needs.reusable-env-vars.outputs.TF_VAR_POOL_ID }}"
+        TF_VAR_PROVIDER_ID="${{ needs.reusable-env-vars.outputs.TF_VAR_PROVIDER_ID }}"
         TF_VAR_GITHUB_REPOSITORY_OWNER="${{ needs.reusable-env-vars.outputs.TF_VAR_GITHUB_REPOSITORY_OWNER }}"
         TF_VAR_GITHUB_REPOSITORY="${{ needs.reusable-env-vars.outputs.TF_VAR_GITHUB_REPOSITORY }}"
         TF_VAR_GITHUB_REF="${{ needs.reusable-env-vars.outputs.TF_VAR_GITHUB_REF }}"
@@ -86,7 +91,6 @@ jobs:
       GOOGLE_IMPERSONATE_SERVICE_ACCOUNT_EMAIL: ${{ secrets.GOOGLE_IMPERSONATE_SERVICE_ACCOUNT_EMAIL }}
       GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
       GOOGLE_PROJECT_BILLING_NUMBER: ${{ secrets.GOOGLE_PROJECT_BILLING_NUMBER }}
-      GOOGLE_WORKLOAD_IDENTITY_PROVIDER: "//iam.googleapis.com/${{ secrets.GOOGLE_WORKLOAD_IDENTITY_PROVIDER }}"
       GOOGLE_OAUTH_ACCESS_TOKEN: ${{ secrets.GOOGLE_OAUTH_ACCESS_TOKEN }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
     with:
@@ -106,6 +110,7 @@ jobs:
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       env_variables: |
         TF_VAR_POOL_ID="${{ needs.reusable-env-vars.outputs.TF_VAR_POOL_ID }}"
+        TF_VAR_PROVIDER_ID="${{ needs.reusable-env-vars.outputs.TF_VAR_PROVIDER_ID }}"
         TF_VAR_GITHUB_REPOSITORY_OWNER="${{ needs.reusable-env-vars.outputs.TF_VAR_GITHUB_REPOSITORY_OWNER }}"
         TF_VAR_GITHUB_REPOSITORY="${{ needs.reusable-env-vars.outputs.TF_VAR_GITHUB_REPOSITORY }}"
         TF_VAR_GITHUB_REF="${{ needs.reusable-env-vars.outputs.TF_VAR_GITHUB_REF }}"
